# openstack_liberasurecode

include/erasurecode/: alg_sig.h
src/: Makefile.am  erasurecode.c
src/backends/jerasure/: jerasure_rs_cauchy.c  jerasure_rs_vand.c
src/backends/rs_vand/: liberasurecode_rs_vand.c
src/builtin/rs_vand/: Makefile.am
src/utils/chksum/: alg_sig.c
test/: Makefile.am
